grammar.js
    source_file: ($) => repeat($._statement),

    /** ************************************************************************
     *                              Keywords
     * ************************************************************************* */
    keyword_if_not_exists: (_) => kw('IF NOT EXISTS'),
    keyword_if_exists: (_) => kw('IF EXISTS'),
    keyword_replace: (_) => kw('OR REPLACE'),
    _keyword_schema: (_) => kw('SCHEMA'),
    _keyword_alter: (_) => kw('ALTER'),
    _keyword_create: (_) => kw('CREATE'),
    _keyword_drop: (_) => kw('DROP'),
    _keyword_is: (_) => kw('IS'),
    _keyword_in: (_) => kw('IN'),
    _keyword_not: (_) => kw('NOT'),
    _keyword_and: (_) => kw('AND'),
    _keyword_or: (_) => kw('OR'),
    _keyword_like: (_) => kw('LIKE'),
    _statement: ($) =>
      seq(
        choice(
          $.create_schema_statement,
          $.alter_schema_statement,
          $.alter_schema_add_replica_statement,
          $.alter_schema_drop_replica_statement,
          $.drop_schema_statement,
          $.undrop_schema_statement,
          $.create_external_schema_statement,
          $.alter_external_schema_statement,
          $.drop_external_schema_statement,
          $.create_table_statement,
          $.create_table_like_statement,
          $.create_table_clone_statement,
          $.create_table_copy_statement,
          $.create_snapshot_table_statement,
          $.create_external_table_statement,
          $.alter_table_statement,
          $.alter_table_rename_statement,
          $.alter_table_column_statement,
          $.alter_organization_set_options_statement,
          $.alter_project_set_options_statement,
          $.alter_bi_capacity_set_options_statement,
          $.create_capacity_statement,
          $.drop_capacity_statement,
          $.create_reservation_statement,
          $.alter_reservation_statement,
          $.drop_reservation_statement,
          $.create_assignment_statement,
          $.drop_assignment_statement,
          $.drop_table_statement,
          $.create_function_statement,
          $.create_remote_function_statement,
          $.drop_function_statement,
          $.create_table_function_statement,
          $.drop_table_function_statement,
          $.create_procedure_statement,
          $.drop_procedure_statement,
          $.create_model_statement,
          $.drop_model_statement,
          $.create_search_index_statement,
          $.drop_search_index_statement,
          $.create_vector_index_statement,
          $.drop_vector_index_statement,
          $.query_statement,
          $.insert_statement,
          $.delete_statement,
          $.truncate_statement,
          $.update_statement,
          $.merge_statement,
          // procedural language
          $.declare_statement,
          $.set_statement,
          $.execute_immediate_statement,
          $.begin_end_statement,
          $.begin_exception_end_statement,
          $.if_statement,
          $.loop_statement,
          $.repeat_statement,
          $.while_statement,
          $.for_in_statement,
          $.break_statement,
          $.continue_statement,
          $.iterate_statement,
          $.leave_statement,
          $.call_statement,
          $.return_statement,
          $.raise_statement,
          $.assert_statement,
          // DCL
          $.grant_statement,
          $.revoke_statement,
          $.create_row_access_policy_statement,
          $.drop_row_access_policy_statement,
          $.drop_all_row_access_policies_statement,
          // Transaction control
          $.begin_transaction_statement,
          $.commit_transaction_statement,
          $.rollback_transaction_statement,
          // Other
          $.export_data_statement,
          $.export_model_statement,
          $.load_data_statement,
        ),
        optional(';'),
      ),

    begin_transaction_statement: (_) => seq(kw('BEGIN'), kw('TRANSACTION')),
    commit_transaction_statement: (_) => seq(kw('COMMIT'), optional(kw('TRANSACTION'))),
    rollback_transaction_statement: (_) => seq(kw('ROLLBACK'), optional(kw('TRANSACTION'))),

    create_external_schema_statement: ($) =>
      prec.right(seq(
        $._keyword_create,
        kw('EXTERNAL'),
        $._keyword_schema,
        optional($.keyword_if_not_exists),
        field('schema_name', $.identifier),
        optional($.with_connection_clause),
        optional($.option_clause),
      )),

    alter_external_schema_statement: ($) =>
      seq(
        $._keyword_alter,
        kw('EXTERNAL'),
        $._keyword_schema,
        optional($.keyword_if_exists),
        field('schema_name', $.identifier),
        kw('SET'),
        optional($.option_clause),
      ),

    drop_external_schema_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('EXTERNAL'),
        $._keyword_schema,
        optional($.keyword_if_exists),
        field('schema_name', $.identifier),
      ),

    undrop_schema_statement: ($) =>
      seq(
        kw('UNDROP'),
        $._keyword_schema,
        optional($.keyword_if_not_exists),
        field('schema_name', $.identifier),
      ),

    alter_organization_set_options_statement: ($) =>
      seq(
        $._keyword_alter,
        kw('ORGANIZATION'),
        kw('SET'),
        $.option_clause,
      ),

    alter_project_set_options_statement: ($) =>
      seq(
        $._keyword_alter,
        kw('PROJECT'),
        optional(field('project_id', $.identifier)),
        kw('SET'),
        $.option_clause,
      ),

    alter_bi_capacity_set_options_statement: ($) =>
      seq(
        $._keyword_alter,
        kw('BI_CAPACITY'),
        field('bi_capacity_name', $.identifier),
        kw('SET'),
        $.option_clause,
      ),

    create_capacity_statement: ($) =>
      seq(
        $._keyword_create,
        kw('CAPACITY'),
        field('capacity_name', $.identifier),
        $.option_clause,
      ),

    drop_capacity_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('CAPACITY'),
        optional($.keyword_if_exists),
        field('capacity_name', $.identifier),
      ),

    create_reservation_statement: ($) =>
      seq(
        $._keyword_create,
        kw('RESERVATION'),
        field('reservation_name', $.identifier),
        $.option_clause,
      ),

    alter_reservation_statement: ($) =>
      seq(
        $._keyword_alter,
        kw('RESERVATION'),
        optional($.keyword_if_exists),
        field('reservation_name', $.identifier),
        kw('SET'),
        $.option_clause,
      ),

    drop_reservation_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('RESERVATION'),
        optional($.keyword_if_exists),
        field('reservation_name', $.identifier),
      ),

    create_assignment_statement: ($) =>
      seq(
        $._keyword_create,
        kw('ASSIGNMENT'),
        field('assignment_name', $.identifier),
        $.option_clause,
      ),

    drop_assignment_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('ASSIGNMENT'),
        optional($.keyword_if_exists),
        field('assignment_name', $.identifier),
      ),
    create_search_index_statement: ($) =>
      seq(
        $._keyword_create,
        kw('SEARCH INDEX'),
        optional($.keyword_if_not_exists),
        field('index_name', $.identifier),
        kw('ON'),
        field('table_name', $.identifier),
        '(',
        $._index_column_group,
        ')',
        optional($.option_clause),
      ),
    _index_column_group: ($) =>
      choice(
        $.index_all_columns,
        commaSep1(field('column_name', $.identifier)),
      ),
    index_all_columns: (_) => kw('ALL COLUMNS'),
    drop_search_index_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('SEARCH INDEX'),
        optional($.keyword_if_exists),
        field('index_name', $.identifier),
        kw('ON'),
        field('table_name', $.identifier),
      ),
    option_clause: ($) => seq(kw('OPTIONS'), '(', optional(sep1($.option_item, ',')), ')'),
    option_item: ($) => seq(field('key', $.identifier), '=', field('value', $._expression)),

    create_row_access_policy_statement: ($) =>
      seq(
        $._keyword_create,
        optional($.keyword_replace),
        kw('ROW ACCESS POLICY'),
        optional($.keyword_if_not_exists),
        field('policy_name', $.identifier),
        kw('ON'),
        field('table_name', $.identifier),
        optional($.grant_to_clause),
        $.filter_using_clause,
      ),

    grant_to_clause: ($) => seq(kw('GRANT TO'), '(', commaSep1(field('grantee', $.string)), ')'),

    filter_using_clause: ($) => seq(kw('FILTER USING'), '(', field('filter', $._expression), ')'),

    drop_row_access_policy_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('ROW ACCESS POLICY'),
        optional($.keyword_if_exists),
        field('policy_name', $.identifier),
        kw('ON'),
        field('table_name', $.identifier),
      ),

    drop_all_row_access_policies_statement: ($) =>
      seq(
        $._keyword_drop,
        kw('ALL ROW ACCESS POLICIES'),
        kw('ON'),
        field('table_name', $.identifier),
      ),

    /** *******************************************************************************
     *  Other Statements
     * ***************************************************************************** */

    export_model_statement: ($) =>
      prec.right(seq(
        kw('EXPORT MODEL'),
        field('model_name', $.identifier),
        optional($.with_connection_clause),
        optional($.option_clause),
      )),

    with_connection_clause: ($) =>
      seq(
        kw('WITH CONNECTION'),
        field('connection_name', alias($.identifier, $.connection_path)),
      ),

    _number: ($) => choice($._integer, $._float, $.numeric),
    number: ($) => $._number,
    _type_chrono: ($) => choice($._keyword_date, $._keyword_time, $._keyword_datetime, $._keyword_timestamp),
    _identifier: ($) => choice($._quoted_identifier, $._unquoted_identifier),
    _dotted_identifier: ($) => seq($._identifier, token.immediate('.')),
    identifier: ($) =>
      choice(
        prec.right(seq(repeat($._dotted_identifier), $._identifier)),
        prec(100, $._type_chrono),
      ),
    string: ($) =>
      seq(
        $._string_start,
        repeat($._string_content),
        $._string_end,
      ),
    _expression: ($) =>
      choice(
        $.unary_expression,
        $.between_operator,
        $.casewhen_expression,
        $.function_call,
        $._literal,
        $.identifier,
        $.unnest_clause,
        $._parenthesized_expression,
        $.binary_expression,
        $.field_access,
        $.element_access,
        $.argument_reference,
        $.select_subexpression,
        $.cast_expression,
      ),

    binary_expression: ($) => {
      const table = [
        ['binary_times', choice(...multiplicative_operators)],
        ['binary_plus', choice(...additive_operators)],
        ['operator_compare', choice(...comparative_operators)],
        ['binary_bitwise_shift', choice(...shift_operators)],
        ['binary_bitwise_and', '&'],
        ['binary_bitwise_xor', '^'],
        ['binary_bitwise_or', '|'],
        ['binary_and', $._keyword_and],
        ['binary_or', $._keyword_or],
        ['operator_compare', seq(optional($._keyword_not), $._keyword_in)],
        // ['operator_compare', seq(optional($._keyword_not), $._keyword_like)],
        [
          'operator_compare',
          seq($._keyword_is, optional($._keyword_not), kw('DISTINCT FROM')),
        ],
      ];

      const exps = table.map(([precedence, operator]) =>
        prec.left(
          precedence,
          seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          ),
        )
      );

      const specials = [
        'operator_compare',
        prec.left(seq(
          field('left', $._expression),
          choice(
            seq(
              field('operator', $.like_operator),
              field('right', alias($.string, $.like_pattern)),
            ),
            seq(
              field('operator', $.quantitve_like_operator),
              field('right', $.quantitve_like_patterns),
            ),
          ),
        )),
      ];

      return choice(...exps, ...specials);
    },
